--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
+  camera: ^0.5.8+2
+  share: ^0.6.3+6
+  path: ^1.6.4
+  path_provider: ^1.6.11
+
+
 
 dev_dependencies:
   flutter_test:
