--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   camera: ^0.5.8+2
-  share: ^0.6.3+6
+  esys_flutter_share: ^1.0.2
   path: ^1.6.4
   path_provider: ^1.6.11
 
